[gd_scene load_steps=21 format=3 uid="uid://cdlyfttn3y1br"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_3g4yc"]
[ext_resource type="Texture2D" uid="uid://btci0vhdynoen" path="res://Assets/MenuBG.png" id="1_mp1qd"]
[ext_resource type="FontFile" uid="uid://dyd80n3v81nhl" path="res://Assets/AldotheApache.ttf" id="2_0x0r6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_use63"]
texture = ExtResource("1_mp1qd")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ddw4c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wt67g"]
bg_color = Color(0.375637, 0.411776, 0.112002, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_juuh8"]
bg_color = Color(0.277247, 0.305129, 0.0738357, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8k48f"]
bg_color = Color(0.443125, 0.484925, 0.138209, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sd5l5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fv3hj"]
bg_color = Color(0.14713, 0.288952, 0.958961, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_foini"]
bg_color = Color(0.0894142, 0.148495, 0.848712, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lx5mu"]
bg_color = Color(0.245638, 0.419096, 0.983942, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7blqc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8kaif"]
bg_color = Color(0.483048, 0.303725, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1itf"]
bg_color = Color(0.460611, 0.288765, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1fdr8"]
bg_color = Color(0.628812, 0.400049, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3mfwj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5w7j0"]
bg_color = Color(0.835718, 1.73271e-06, 4.81307e-07, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ox76"]
bg_color = Color(0.625575, 6.97896e-07, 3.85046e-07, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcerd"]
bg_color = Color(1, 0.151344, 0.108333, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3g4yc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_use63")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -487.0
offset_top = -56.0
offset_right = -250.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Start Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_0x0r6")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_ddw4c")
theme_override_styles/hover = SubResource("StyleBoxFlat_wt67g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_juuh8")
theme_override_styles/normal = SubResource("StyleBoxFlat_8k48f")
text = "Start
"

[node name="Options Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_0x0r6")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_sd5l5")
theme_override_styles/hover = SubResource("StyleBoxFlat_fv3hj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_foini")
theme_override_styles/normal = SubResource("StyleBoxFlat_lx5mu")
text = "Options
"

[node name="About Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_0x0r6")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_7blqc")
theme_override_styles/hover = SubResource("StyleBoxFlat_8kaif")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f1itf")
theme_override_styles/normal = SubResource("StyleBoxFlat_1fdr8")
text = "ABOUT"

[node name="Exit Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_0x0r6")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_3mfwj")
theme_override_styles/hover = SubResource("StyleBoxFlat_5w7j0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ox76")
theme_override_styles/normal = SubResource("StyleBoxFlat_tcerd")
text = "Exit
"

[connection signal="pressed" from="VBoxContainer/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/About Button" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit Button" to="." method="_on_exit_button_pressed"]
